--- a/Report/journal09.bib
+++ b/Report/journal09.bib
@@ -48,5 +48,54 @@
   publisher={Now Publishers, Inc.}
 }
 
+@InProceedings{SSDTracking,
+author="Cobzas, Dana
+and Jagersand, Martin",
+editor="MacLean, W. James",
+title="3D SSD Tracking from Uncalibrated Video",
+booktitle="Spatial Coherence for Visual Motion Analysis",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="25--37",
+}
+
+@INPROCEEDINGS{4270499,
+author={A. {Tyagi} and M. {Keck} and J. W. {Davis} and G. {Potamianos}},
+booktitle={2007 IEEE Conference on Computer Vision and Pattern Recognition},
+title={Kernel-Based 3D Tracking},
+year={2007},
+volume={},
+number={},
+pages={1-8},
+keywords={computer vision;object detection;tracking;3D tracking;computer vision;robust object tracking;bootstrapping;3D point clouds;automatic initialization;drift detection;Cameras;Clouds;Fuses;Computer vision;Robustness;Intelligent sensors;Sensor fusion;Sensor phenomena and characterization;Sensor systems;Surveillance},
+doi={10.1109/CVPR.2007.383501},
+ISSN={1063-6919},
+month={June},}
+
+@ARTICLE{4775902,
+author={T. {Brox} and B. {Rosenhahn} and J. {Gall} and D. {Cremers}},
+journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+title={Combined Region and Motion-Based 3D Tracking of Rigid and Articulated Objects},
+year={2010},
+volume={32},
+number={3},
+pages={402-415},
+keywords={image motion analysis;image segmentation;image sequences;object detection;optical tracking;motion-based 3D tracking;rigid object;articulated object;region fitting;optical flow;SIFT feature;object region tracking;SIFT tracking;object segmentation;Tracking;Image edge detection;Cameras;Optical sensors;Image motion analysis;Robot vision systems;Humans;Biological system modeling;Optical computing;Image segmentation;Tracking;segmentation;motion.;Algorithms;Humans;Image Processing, Computer-Assisted;Models, Statistical;Movement},
+doi={10.1109/TPAMI.2009.32},
+ISSN={1939-3539},
+month={March},}
+
+@article{haag1999combination,
+  title={Combination of edge element and optical flow estimates for 3D-model-based vehicle tracking in traffic image sequences},
+  author={Haag, Michael and Nagel, Hans-Hellmut},
+  journal={International Journal of Computer Vision},
+  volume={35},
+  number={3},
+  pages={295--319},
+  year={1999},
+  publisher={Springer}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
